# func-app-infra

./: .gitignore  README.md  pyrightconfig.json
app/: .funcignore  .pre-commit-config.yaml  function_app.py  local.settings.json  pyproject.toml  requirements.dev.txt  requirements.txt  send_event.py
infra/: README.md  cosmosdb.tf  event_hub.tf  func_app.tf  main.tf  outputs.tf
infra/scripts/: setup.sh
